Cambios en pin de saneamiento y colores

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ FixMyBarangay.po
 /web/cobrands/seesomething
 /web/photo
 /local
+/web/upload
 
 /web/cobrands/fixmystreet/compass_app_log.txt
 blog/web/wp
